--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');
 
+body {
+    background-color: green;
+}
+
 header {
     height: 300px;
-    background: url(/assets/images/header.webp) no-repeat center center;
+    background: url(/assets/images/header.jpg) no-repeat center center;
     background-color: green;
     background-size: cover;
 }
@@ -13,4 +17,22 @@ h1 {
     text-align: center;
     padding-top: 8%;
     color: yellow;
+}
+
+nav {
+    height: 40px;
+    text-align: center;
+}
+
+a {
+    color: yellow;
+    background-color: darkred;
+    padding: 10px;
+    border: solid black 1px;
+    text-decoration: none;
+}
+
+a:hover {
+    background-color: greenyellow;
+    color: black;
 }
