--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,7 @@ body {
 
 header {
     height: 300px;
-    background: url(/assets/images/header.jpg) no-repeat center center;
+    background: url(assets/images/header.jpg) no-repeat center center;
     background-color: green;
     background-size: cover;
 }
