--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,14 +53,15 @@ a:hover {
 #why-visit {
     height: 300px;
     text-align: center;
-    width: 100%;
     margin-top: 5%;
 }
 
 #why-visit-p {
     clear: left;
     text-align: left;
-    text-align: justify;
+    text-align: center;
+    margin: auto 10%;
+    margin-bottom: 2%;
 }
 
 .why-visit-photos {
@@ -69,15 +70,13 @@ a:hover {
 }
 
 #where {
-    margin-top: 5%;
+    margin-top: 10%;
     text-align: center;
-    width: 100%;
 }
 
 #national-parks-map {
     width: 500px;
     height: 600px;
-    padding: 0 30%;
 }
 
 #table-div {
@@ -87,13 +86,13 @@ a:hover {
 
 table {
     border: 1px black solid;
-    position: relative;
-    left: 5%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 td, tr, th {
     border: 1px black solid;
-    padding: 10px;
+    padding: 0 10px;
     background-color: burlywood;
 }
 
@@ -129,10 +128,6 @@ li > a {
 /*Responsiveness*/
 
 @media screen and (max-width: 1200px) {
-   
-    h1 {
-    background-color: ;
-   }
 
    nav {
     height: 70px;
@@ -140,13 +135,12 @@ li > a {
    }
 
    .nav-a {
-    margin: px 0px;
-    padding: px;
+    margin: 0px 10px;
+    padding: 1% 0px;
 
     }
 
     #why-visit-p {
-        width: 100%;
         text-align: center;
     }
 
@@ -163,8 +157,13 @@ li > a {
     }
 
     table {
-        table-layout: fixed;
-        width: 110%;
+        width: 93px;
+    }
+
+    td, tr, th {
+        border: 1px black solid;
+        padding: 0 5px;
+        background-color: burlywood;
     }
 
 }
@@ -183,10 +182,11 @@ li > a {
 
 
 
-
+/*
 @media screen and (max-width: 950px) {
     h1 {
-     background-color: ;
+     background-color: red;
     }
 }
+*/
 
