--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,8 +161,11 @@ ol > li {
     width: 320px;
 }
 
+.hike-link-div {
+    text-align: center;
+}
+
 #hike-link {
-    margin: 33vw;
     color: yellow;
     background-color: brown;
     text-transform: uppercase;
@@ -291,13 +294,14 @@ ol > li {
     }
 
     nav {
-        height: 100px;
+        height: 40px;
+        width: 95vw;
     }
 
     .nav-a {
-        font-size: 10px;
-        margin: 1%;
-        height: 60px;
+        font-size: 5px;
+        margin: 1vw;
+        height: 16px;
         }
 
     #national-parks-map {
@@ -345,11 +349,13 @@ ol > li {
         vertical-align: middle;
     }
     .parks-images {
-        height: 50px;
+        width: 10vw;
+        height: auto;
+        padding: 0% 2.5vw;
     }
 
     figcaption {
-        font-size: 5px;
+        font-size: 2px;
     }
 }
 
