--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,7 +294,7 @@ ol > li {
     }
 
     nav {
-        height: 40px;
+        height: 50px;
         width: 95vw;
     }
 
@@ -310,9 +310,8 @@ ol > li {
     }
     
     table {
-        font-size: xx-small;
+        font-size: 6px;
     }
-
     .footer-list i {
         font-size: 150%;
         margin: 0 10px;
@@ -323,6 +322,7 @@ ol > li {
 
     iframe {
         height: 50vh;
+        width: 60vw;
     }
 
     #killarney-hike-map {
@@ -335,7 +335,6 @@ ol > li {
     }
 
     #hike-link {
-        font-size: 5px;
         margin: 32vw;
         margin-top: 100px;
     }
@@ -351,11 +350,11 @@ ol > li {
     .parks-images {
         width: 10vw;
         height: auto;
-        padding: 0% 2.5vw;
+        padding: 0% 2vw;
     }
 
     figcaption {
-        font-size: 2px;
+        font-size: 5px;
     }
 }
 
