--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,28 +12,35 @@ header {
     background: url('../images/header.jpg') no-repeat center center;
     background-color: green;
     background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 h1 {
     font-family: nunito, sans-serif;
     font-size: 80px;
     text-align: center;
-    padding-top: 8%;
     color: orange;
 }
 
 nav {
     text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
 .nav-a {
     color: black;
     background-color: orange;
     padding: 4px;
+    margin: auto 2px;
     border: solid black 1px;
     text-decoration: none;
     position: relative;
     top: 15px;
+    display: flex;
+    align-items: center;
 }
 
 .nav-a:hover {
@@ -42,7 +49,7 @@ nav {
 }
 
 .heading {
-    margin-top: 60px;
+    margin-top: 30px;
     color: green;
     font-family: nunito, sans-serif;
     text-align: center;
@@ -51,9 +58,7 @@ nav {
 /* Home Page*/
 
 #why-visit {
-    height: 300px;
     text-align: center;
-    margin-top: 5%;
 }
 
 #why-visit-p {
@@ -242,36 +247,8 @@ input[type=submit]:hover {
 
 @media screen and (max-width: 1200px) {
 
-   nav {
-    height: 70px;
-    display: inline-flex;
-   }
-
    .nav-a {
-    margin: 0px 10px;
-    padding: 1% 6px;
-    }
-
-    #why-visit-p {
-        text-align: center;
-    }
-
-    #why-visit-photo {
-        width: 200px;
-        height: 200px;
-        position: absolute;
-    }
-
-    .why-visit-photos {
-        width: 200px;
-        height: 200px;
-        margin: 0 5px;
-    }
-
-    td, tr, th {
-        border: 1px black solid;
-        padding: 0px 5px;
-        background-color: burlywood;
+    height: 45px;
     }
 
     /*National Parks*/
@@ -304,57 +281,39 @@ input[type=submit]:hover {
 }
 
 @media screen and (max-width: 950px) {
-    
-    .nav-a {
-        margin: 0px 10px;
-        padding: 1px 6px;
-    }
 
-    #why-visit {
-        height: fit-content;
+    h1 {
+        font-size: 60px;
     }
 
     #home-div-photos {
         column-count: 2;
-        margin: 0px;
     }
 
     .why-visit-photos {
-        height: fit-content;
         width: 90%;
         margin: 10px 0px;
     }
 
     td, tr, th {
-        border: 1px black solid;
-        padding: 0px 0px;
-        background-color: burlywood;
-    }
-
-    .hike-map {
-        margin: 3% 30%;
+        padding: 1px 1px;
+        background-color: orange;
     }
 }
+
 
 @media screen and (max-width: 800px) {
     
     body {
-        font-size: 10px;
-    }
-
-    h1 {
-        font-size: 50px;
-        position: relative;
-        top: 15%;
-    }
-
-    nav {
-        height: 70px;
-        margin-bottom: 10px;
+        background-color: red;
     }
 
     .nav-a {
-        margin: 0% 1%;
+        font-size: x-small;
+    }
+
+    .heading {
+        font-size: 20px;
     }
 
     #national-parks-map {
@@ -363,8 +322,15 @@ input[type=submit]:hover {
     }
     
     table {
-        font-size: 6px;
+        width: 90vw;
     }
+
+    td, tr, th {
+        border: 1px black solid;
+        font-size: xx-small;
+        background-color: orange;
+    }
+
     .footer-list i {
         font-size: 150%;
         margin: 0 10px;
@@ -393,7 +359,7 @@ input[type=submit]:hover {
     }
 
     ol {
-        widt: 90vw;
+        width: 90vw;
     }
 
     .div-parks-images > div {
