--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,6 +190,10 @@ ol > li {
     text-align: center;
 }
 
+figure {
+    margin: 0;
+}
+
 .parks-images {
     width: 15vw;
     height: 162px;
@@ -354,7 +358,7 @@ input[type=submit]:hover {
     }
 
     .parks-images {
-        height: 50px;
+        height: 70px;
     }
 
     figcaption {
