Add new header and footer to all pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,9 @@ nav {
 
 .heading {
     font-family: nunito, sans-serif;
+    color: green;
+    text-align: center;
+    margin-top: 3%;
 }
 
 /*Footer*/
